# TelegramGallery

./: .gitignore  README.md  README_CN.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/tangxiaolv/telegramgallery/app/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tangxiaolv/telegramgallery/app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/tangxiaolv/telegramgallery/app/: ExampleUnitTest.java
telegramgallery/: build.gradle
telegramgallery/src/main/: AndroidManifest.xml
telegramgallery/src/main/cpp/: CMakeLists.txt  gifvideo.cpp
telegramgallery/src/main/cpp/libavformat/: CMakeLists.txt
telegramgallery/src/main/cpp/libyuv/: CMakeLists.txt
telegramgallery/src/main/java/com/tangxiaolv/telegramgallery/: AnimatedFileDrawable.java  AnimatorListenerAdapterProxy.java  BaseFragmentAdapter.java  DispatchQueue.java  Gallery.java  GalleryActivity.java  GalleryConfig.java  ImageReceiver.java  LruCache.java  PhotoAlbumPickerActivity.java  PhotoPickerActivity.java  PhotoViewer.java  Theme.java
telegramgallery/src/main/java/com/tangxiaolv/telegramgallery/Actionbar/: ActionBar.java  ActionBarLayout.java  ActionBarMenu.java  ActionBarMenuItem.java  BackDrawable.java  BaseFragment.java  MenuDrawable.java  SimpleTextView.java
telegramgallery/src/main/java/com/tangxiaolv/telegramgallery/Components/: ActionBarPopupWindow.java  AspectRatioFrameLayout.java  BackupImageView.java  CheckBox.java  ClippingImageView.java  PhotoCropView.java  PhotoPickerAlbumsCell.java  PhotoPickerPhotoCell.java  PhotoPickerSearchCell.java  PickerBottomLayout.java  SizeNotifierFrameLayoutPhoto.java
telegramgallery/src/main/java/com/tangxiaolv/telegramgallery/TL/: AbstractSerializedData.java  Document.java  DocumentAttribute.java  FileLocation.java  GeoPoint.java  InputEncryptedFile.java  InputFile.java  InputFileLocation.java  InputStickerSet.java  NativeByteBuffer.java  Photo.java  PhotoSize.java  TLObject.java  TL_document.java  TL_documentAttributeAnimated.java  TL_documentAttributeAudio.java  TL_documentAttributeAudio_layer45.java  TL_documentAttributeAudio_old.java  TL_documentAttributeFilename.java  TL_documentAttributeImageSize.java  TL_documentAttributeSticker.java  TL_documentAttributeSticker_old.java  TL_documentAttributeSticker_old2.java  TL_documentAttributeVideo.java  TL_documentEmpty.java  TL_documentEncrypted.java  TL_documentEncrypted_old.java  TL_document_old.java  TL_fileEncryptedLocation.java  TL_fileLocation.java  TL_fileLocationUnavailable.java  TL_geoPoint.java  TL_geoPointEmpty.java  TL_inputDocumentFileLocation.java  TL_inputEncryptedFile.java  TL_inputEncryptedFileBigUploaded.java  TL_inputEncryptedFileEmpty.java  TL_inputEncryptedFileLocation.java  TL_inputEncryptedFileUploaded.java  TL_inputFile.java  (+14 more)
telegramgallery/src/main/java/com/tangxiaolv/telegramgallery/tl/: Photo.java  (+15 more)
telegramgallery/src/main/jni/: Android.mk  Application.mk  gifvideo.cpp  jni.c  utils.h  video.c
telegramgallery/src/main/res/anim/: push_bottom_in.xml  push_bottom_out.xml
telegramgallery/src/main/res/drawable/: album_bar_selector_style.xml  preview_cell_canceled.xml  preview_cell_checked.xml  sel_login_input_bg.xml  shape_send.xml  shape_unsend.xml  thumb.xml
telegramgallery/src/main/res/layout/: activity_gallery.xml
telegramgallery/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
telegramgallery/src/main/res/values-en/: strings.xml
telegramgallery/src/main/res/values-pl/: strings.xml
telegramgallery/src/main/res/values-zh/: strings.xml
(+443 files in other folders)
